# livesplit-wrapper

./: Cargo.toml  LICENSE  README.md  crates.js  index.html  search-index.js  settings.html  source-files.js  todo.md
bytemuck/: all.html  enum.PodCastError.html  fn.bytes_of.html  fn.bytes_of_mut.html  fn.cast.html  fn.cast_mut.html  fn.cast_ref.html  fn.cast_slice.html  fn.cast_slice_mut.html  fn.from_bytes.html  fn.from_bytes_mut.html  fn.pod_align_to.html  fn.pod_align_to_mut.html  fn.pod_read_unaligned.html  fn.try_cast.html  fn.try_cast_mut.html  fn.try_cast_ref.html  fn.try_cast_slice.html  fn.try_cast_slice_mut.html  fn.try_from_bytes.html  fn.try_from_bytes_mut.html  fn.try_pod_read_unaligned.html  index.html  macro.offset_of.html  trait.AnyBitPattern.html  trait.Contiguous.html  trait.NoUninit.html  trait.Pod.html  trait.PodInOption.html  trait.TransparentWrapper.html  trait.Zeroable.html  trait.ZeroableInOption.html
livesplit_wrapper/: all.html  enum.Error.html  enum.TimerState.html  index.html  macro.register_autosplitter!.html  macro.register_autosplitter.html  sidebar-items.js  struct.Logger.html  struct.OnceCell.html  struct.Process.html  trait.HostFunctions.html  trait.Pod.html  trait.Splitter.html  type.Address.html  type.Result.html
log/: all.html  constant.STATIC_MAX_LEVEL.html  enum.Level.html  enum.LevelFilter.html  fn.logger.html  fn.max_level.html  fn.set_logger.html  fn.set_logger_racy.html  fn.set_max_level.html  index.html  macro.debug.html  macro.error.html  macro.info.html  macro.log.html  macro.log_enabled.html  macro.trace.html  (+8 more)
(+83 files in other folders)
